--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react-icons": "^4.4.0"
   },
   "devDependencies": {
+    "@iconify/react": "^3.2.2",
     "autoprefixer": "^10.4.8",
     "eslint": "8.21.0",
     "eslint-config-next": "12.2.3",
